--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  http: ^1.1.0
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
